--- a/post.html
+++ b/post.html
@@ -1,5 +1,5 @@
 <form action="https://daryaftamn.shop/api.php" method="POST">
-  <input type="text" name="token" placeholder="API Token" required>
+  <input type="text" name="token" placeholder="Token" required>
   <input type="text" name="request" placeholder="Request" required>
-  <button type="submit">Submit</button>
+  <button type="submit">POST</button>
 </form>
